# web_htop

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/include/client/app/: client_app.hpp  client_context.hpp
client/include/client/filters/: process_filter.hpp  process_sort.hpp
client/include/client/http/: http_control_client.hpp
client/include/client/net/: reconnect_policy.hpp  server_connection.hpp  stream_reader.hpp
client/include/client/state/: client_state.hpp
client/include/client/ui/: dashboard_view.hpp  formatters.hpp  help_view.hpp  process_table_view.hpp  status_bar_view.hpp  terminal_ui.hpp  theme.hpp
client/src/: main.cpp
client/src/app/: client_app.cpp  client_context.cpp
client/src/filters/: process_filter.cpp  process_sort.cpp
client/src/http/: http_control_client.cpp
client/src/net/: reconnect_policy.cpp  server_connection.cpp  stream_reader.cpp
client/src/state/: client_state.cpp
client/src/ui/: dashboard_view.cpp  formatters.cpp  help_view.cpp  process_table_view.cpp  status_bar_view.cpp  terminal_ui.cpp  theme.cpp
cmake/: Dependencies.cmake
common/: CMakeLists.txt
common/include/common/: config.hpp  constants.hpp  enums.hpp  types.hpp
common/include/common/json/: parser.hpp  utils.hpp
common/include/common/models/: cpu_metrics.hpp  disk_metrics.hpp  loadavg_metrics.hpp  memory_metrics.hpp  network_metrics.hpp  process_metrics.hpp  system_snapshot.hpp
common/src/common/json/: parser.cpp  utils.cpp
common/src/common/models/: cpu_metrics.cpp  disk_metrics.cpp  loadavg_metrics.cpp  memory_metrics.cpp  network_metrics.cpp  process_metrics.cpp  system_snapshot.cpp
docs/: architecture.md  build_run.md  description_branches.md
scripts/: format.sh  run_client.sh  run_server.sh
server/: CMakeLists.txt
server/include/server/app/: server_app.hpp  server_context.hpp
server/include/server/collectors/: collector_utils.hpp  cpu_collector.hpp  disk_collector.hpp  loadavg_collector.hpp  memory_collector.hpp  metrics_collector.hpp  network_collector.hpp  process_collector.hpp
server/include/server/config/: config_manager.hpp  server_config.hpp
server/include/server/control/: process_controller.hpp
server/include/server/http/: dto_mapper.hpp  http_handlers.hpp  http_router.hpp  http_server.hpp
server/include/server/state/: process_history.hpp  shared_state.hpp
server/include/server/system/: filesystem_reader.hpp  linux_parser.hpp  proc_reader.hpp
server/include/server/transport/: broadcaster.hpp  client_session.hpp  streaming_server.hpp  tcp_message_framer.hpp
server/src/: main.cpp
server/src/app/: server_app.cpp  server_context.cpp
server/src/collectors/: collector_utils.cpp  cpu_collector.cpp  disk_collector.cpp  loadavg_collector.cpp  memory_collector.cpp  metrics_collector.cpp  network_collector.cpp  process_collector.cpp
server/src/config/: config_manager.cpp
server/src/control/: process_controller.cpp
server/src/http/: dto_mapper.cpp  http_handlers.cpp  http_router.cpp  http_server.cpp
server/src/state/: process_history.cpp  shared_state.cpp
server/src/system/: filesystem_reader.cpp  linux_parser.cpp  proc_reader.cpp
server/src/transport/: broadcaster.cpp  client_session.cpp  streaming_server.cpp  tcp_message_framer.cpp
tests/: CMakeLists.txt
tests/common/: test_json_parser.cpp  test_serialization.cpp
tests/server/: test_cpu_collector.cpp  test_http_router.cpp  test_server_core.cpp
